net/net/NativeMethods.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace Microsoft.Research.SEAL
{
    static class NativeMethods
    {
        private const string SEALdll = "SEALdll.dll";

        #region BigUInt methods

        [DllImport(SEALdll, EntryPoint = "BigUInt_Create1", PreserveSig = false)]
        internal static extern void BigUInt_Create(out IntPtr bigUInt);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Create2", PreserveSig = false)]
        internal static extern void BigUInt_Create(int bitCount, out IntPtr bigUInt);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Create3", PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_Create(int bitCount, string hexString, out IntPtr bigUInt);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Create4", PreserveSig = false)]
        internal static extern void BigUInt_Create(int bitCount, ulong value, out IntPtr bigUInt);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Create5", PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_Create(string hexString, out IntPtr bigUInt);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Create6", PreserveSig = false)]
        internal static extern void BigUInt_Create(IntPtr copy, out IntPtr bigUInt);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_Destroy(IntPtr thisptr);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_IsAlias(IntPtr thisptr, out bool isAlias);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_BitCount(IntPtr thisptr, out int bitCount);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_ByteCount(IntPtr thisptr, out ulong byteCount);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_UInt64Count(IntPtr thisptr, out ulong uint64Count);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_IsZero(IntPtr thisptr, out bool isZero);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_Get(IntPtr thisptr, int index, out byte value);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_GetU64(IntPtr thisptr, int index, out ulong value);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_GetSignificantBitCount(IntPtr thisptr, out int significantBitCount);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Set1", PreserveSig = false)]
        internal static extern void BigUInt_Set(IntPtr thisptr, int index, byte value);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Set2", PreserveSig = false)]
        internal static extern void BigUInt_Set(IntPtr thisptr, IntPtr assign);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Set3", PreserveSig = false)]
        internal static extern void BigUInt_Set(IntPtr thisptr, ulong value);

        [DllImport(SEALdll, EntryPoint = "BigUInt_Set4", PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_Set(IntPtr thisptr, string assign);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_SetZero(IntPtr thisptr);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_Resize(IntPtr thisptr, int bitCount);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_Equals(IntPtr thisptr, IntPtr compare, out bool result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_CompareTo1", PreserveSig = false)]
        internal static extern void BigUInt_CompareTo(IntPtr thisptr, IntPtr compare, out int result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_CompareTo2", PreserveSig = false)]
        internal static extern void BigUInt_CompareTo(IntPtr thisptr, ulong compare, out int result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_DivideRemainder1", PreserveSig = false)]
        internal static extern void BigUInt_DivideRemainder(IntPtr thisptr, IntPtr operand2, IntPtr remainder, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_DivideRemainder2", PreserveSig = false)]
        internal static extern void BigUInt_DivideRemainder(IntPtr thisptr, ulong operand2, IntPtr remainder, out IntPtr result);

        [DllImport(SEALdll, PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_ToString(
            IntPtr thisptr,
            StringBuilder outstr,
            ref int length);

        [DllImport(SEALdll, PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_ToDecimalString(
            IntPtr thisptr,
            StringBuilder outstr,
            ref int length);

        [DllImport(SEALdll, PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_DuplicateTo(IntPtr thisptr, IntPtr destination);

        [DllImport(SEALdll, PreserveSig = false, CharSet = CharSet.Ansi)]
        internal static extern void BigUInt_DuplicateFrom(IntPtr thisptr, IntPtr value);

        [DllImport(SEALdll, EntryPoint = "BigUInt_ModuloInvert1", PreserveSig = false)]
        internal static extern void BigUInt_ModuloInvert(IntPtr thisptr, IntPtr modulus, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_ModuloInvert2", PreserveSig = false)]
        internal static extern void BigUInt_ModuloInvert(IntPtr thisptr, ulong modulus, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_TryModuloInvert1", PreserveSig = false)]
        internal static extern void BigUInt_TryModuloInvert(IntPtr thisptr, IntPtr modulus, IntPtr inverse, out bool result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_TryModuloInvert2", PreserveSig = false)]
        internal static extern void BigUInt_TryModuloInvert(IntPtr thisptr, ulong modulus, IntPtr inverse, out bool result);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_OperatorNeg(IntPtr thisptr, out IntPtr result);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_OperatorTilde(IntPtr thisptr, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorPlus1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorPlus(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorPlus2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorPlus(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorMinus1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorMinus(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorMinus2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorMinus(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorMult1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorMult(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorMult2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorMult(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorDiv1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorDiv(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorDiv2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorDiv(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorXor1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorXor(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorXor2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorXor(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorAnd1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorAnd(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorAnd2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorAnd(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorOr1", PreserveSig = false)]
        internal static extern void BigUInt_OperatorOr(IntPtr thisptr, IntPtr operand, out IntPtr result);

        [DllImport(SEALdll, EntryPoint = "BigUInt_OperatorOr2", PreserveSig = false)]
        internal static extern void BigUInt_OperatorOr(IntPtr thisptr, ulong operand, out IntPtr result);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_OperatorShiftLeft(IntPtr thisptr, int shift, out IntPtr result);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_OperatorShiftRight(IntPtr thisptr, int shift, out IntPtr result);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void BigUInt_ToDouble(IntPtr thisptr, out double result);

        #endregion

        #region EncryptionParameterQualifiers methods

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_Create(IntPtr copy, out IntPtr epq);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_Destroy(IntPtr thisptr);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_ParametersSet(IntPtr thisptr, out bool parametersSet);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_EnableFFT(IntPtr thisptr, out bool enableFFT);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_EnableNTT(IntPtr thisptr, out bool enableNTT);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_EnableBatching(IntPtr thisptr, out bool enableBatching);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void EPQ_EnableFastPlainLift(IntPtr thisptr, out bool enableFastPlainLift);

        #endregion

        #region SmallModulus methods

        [DllImport(SEALdll, EntryPoint = "SmallModulus_Create1", PreserveSig = false)]
        internal static extern void SmallModulus_Create(ulong value, out IntPtr smallModulus);

        [DllImport(SEALdll, EntryPoint = "SmallModulus_Create2", PreserveSig = false)]
        internal static extern void SmallModulus_Create(IntPtr copy, out IntPtr smallModulus);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void SmallModulus_Destroy(IntPtr thisptr);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void SmallModulus_IsZero(IntPtr thisptr, out bool isZero);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void SmallModulus_Value(IntPtr thisptr, out ulong value);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void SmallModulus_BitCount(IntPtr thisptr, out int bitCount);

        [DllImport(SEALdll, PreserveSig = false)]
        internal static extern void SmallModulus_UInt64Count(IntPtr thisptr, out ulong uint64Count);

        [DllImport(SEALdll, EntryPoint = "SmallModulus_Set1", PreserveSig = false)]
        internal static extern void SmallModulus_Set(IntPtr thisptr, IntPtr assign);
